@@ -1,12 +1,12 @@
 package com.restaurant.reservation.service;
 
+import com.restaurant.reservation.dto.request.AvailabilityRequest;
 import com.restaurant.reservation.entity.*;
 import com.restaurant.reservation.repository.*;
 import com.restaurant.reservation.strategyPattern.TableAssignmentStrategy;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,34 +17,41 @@ public class AvailabilityService {
     private final TimeSlotRepository timeSlotRepository;
     private final RestaurantTableRepository tableRepository;
     private final ReservationRepository reservationRepository;
-
-    //  Inject Strategy
     private final TableAssignmentStrategy strategy;
 
-    // =========== GET AVAILABLE SLOTS =============
-    public List<String> getAvailableSlots(Long restaurantId, LocalDate date, int guests) {
+    // =========== MAIN METHOD ===========
+    public List<String> getAvailableSlots(AvailabilityRequest request) {
 
         List<TimeSlot> slots =
-                timeSlotRepository.findByRestaurantIdAndIsActiveTrue(restaurantId);
+                timeSlotRepository.findByRestaurantIdAndIsActiveTrue(
+                        request.getRestaurantId()
+                );
 
         return slots.stream()
-                .filter(slot -> hasAvailableTable(restaurantId, date, slot.getId(), guests))
+                .filter(slot -> hasAvailableTable(
+                        request.getRestaurantId(),
+                        request.getDate(),
+                        slot.getId(),
+                        request.getGuests()
+                ))
                 .map(slot -> slot.getSlotTime().toString())
                 .collect(Collectors.toList());
     }
 
-    // ===CHECK AVAILABILITY USING STRATEGY =====
+    // =========== CHECK AVAILABILITY ===========
     public boolean hasAvailableTable(Long restaurantId,
-                                     LocalDate date,
+                                     java.time.LocalDate date,
                                      Long slotId,
                                      int guests) {
 
-        //  Get tables that can fit guests
         List<RestaurantTable> tables =
                 tableRepository.findByRestaurantIdAndCapacityGreaterThanEqual(
                         restaurantId, guests);
 
-        // Filter only FREE tables (not reserved)
+        if (tables.isEmpty()) {
+            return false;
+        }
+
         List<RestaurantTable> availableTables = tables.stream()
                 .filter(table -> !reservationRepository
                         .existsByTableIdAndReservationDateAndTimeSlotIdAndStatusNot(
@@ -52,13 +59,17 @@ public class AvailabilityService {
                                 date,
                                 slotId,
                                 ReservationStatus.CANCELLED))
-                .collect(Collectors.toList());
+                .toList();
 
-        //  Use Strategy to pick best table
+        if (availableTables.isEmpty()) {
+            return false;
+        }
+
         try {
             strategy.assign(availableTables, guests);
             return true;
         } catch (Exception e) {
+            e.printStackTrace();
             return false;
         }
     }
